Fixed button overlap

--- a/src/Components/Landing_Page/LandingPage.css
+++ b/src/Components/Landing_Page/LandingPage.css
@@ -32,7 +32,7 @@
     padding: 12px 14rem;
     color: #222;
     margin: 0 auto 60px;
-    width: 60%;
+    width: 80%;
 }
 
 .hero-section .button {
